Fix home button z-index

--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ min-width: 1080px;;
     width: auto;
     height: auto;
     text-align: right;
-    z-index: 1000;
+    z-index: 10001;
 }
 
 @keyframes bounceIn {
